syntax = "proto3";
package pb;
option go_package= ".;pb";
import "google/protobuf/empty.proto";

// 定义查询服务包含的方法
service Query {
  rpc GetAge (userInfo) returns (ageInfo) {};
  rpc GetName (ageInfo) returns (userInfo) {};
  rpc Update (userInfo) returns (google.protobuf.Empty) {};
  rpc Watch (watchTime) returns (stream userInfo){}
}

// 请求用的结构体，包含一个name字段
message userInfo {
  string name = 1;
}

// 响应用的结构体，包含一个age字段
message ageInfo {
  int32 age = 1;
}

// watch的时间
message watchTime{
  int32 time = 1;
}
